fixed image size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -26,16 +26,6 @@ body{
     fill: rgb(100, 70, 200);
 }
  */
-@media only screen and (max-width: 750px){
-    #wrap{
-        width: 100%;
-    }
-}
-@media only screen and (min-height: 778px){
-    #wrap{
-        height: 100vh;
-    }
-}
 
 .container {
     position: relative;
@@ -44,6 +34,21 @@ body{
     margin-left: auto;
     margin-right: auto;*/
 }
+@media only screen and (max-width: 750px){
+    #wrap{
+        width: 100%;
+    }
+    .container{
+        width: 320px;
+    }
+}
+@media only screen and (min-height: 778px){
+    #wrap{
+        height: 100vh;
+    }
+}
+
+
 
 .image{
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
